# findre

./: .env.example  .gitignore  PROJECT_STATUS.md  README.md  TASKS.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/agents/: discovery.py  explanation.py  orchestrator.py  scoring.py  user_intent.py
backend/models/: schemas.py
backend/providers/: base.py  demo.py  zillow.py
backend/routers/: api.py
backend/services/: ollama_service.py
backend/storage/: cache.py
docs/: userguide.html
docs/assets/: save-screenshot.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  build.d.ts  index.css
frontend/src/components/Layout/: Layout.tsx  StatusBar.tsx
frontend/src/components/Map/: PropertyMap.tsx  SearchView.tsx
frontend/src/components/Onboarding/: ChatSidebar.tsx  Onboarding.tsx
frontend/src/components/PropertyCard/: MortgageCalc.tsx  PropertyCard.tsx  PropertyDetail.tsx  ResultsSidebar.tsx
frontend/src/components/ScoreWeights/: ScoreWeightsPanel.tsx
frontend/src/services/: api.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
