[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.8",
    "geopy>=2.4.1",
    "haversine>=2.9.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.39.0",
]
